# Jump-Player-Joint-Detection

./: .gitignore  README.md  eval_rfdetr_jump_land.py  main.py  pyproject.toml  train.py  train_rfdetr.py
notebooks/: data-preprocessing-rfdetr.ipynb  data-preprocessing-yolo.ipynb  data-preprocessing.ipynb  test-eval.ipynb
src/utils/: io.py
