[project]
name = "jump-player-joint-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "natsort>=8.4.0",
    "pandas>=2.3.3",
    "rfdetr>=1.3.0",
    "scikit-learn>=1.8.0",
    "soccernet>=0.1.62",
    "supervision==0.27.0",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "ultralytics==8.3.252",
]

[tool.uv.sources]
rfdetr = { git = "https://github.com/roboflow/rf-detr.git" }
